# solis_modbus

./: .gitignore  CONTRIBUTING.md  README.md  hacs.json  pr_agent.toml  pyproject.toml  readme.md  update_translations.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  pr-agent-config.toml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  feature_request.md  help.md  integration.md  pr.md
.github/workflows/: docs-preview.yaml  docs.yaml  pr_agent.yaml  pr_workflow.yaml  release.yaml  stale.yaml  test-sensor-definitions.yaml  tests.yaml
custom_components/solis_modbus/: __init__.py  client_manager.py  config_flow.py  const.py  data_retrieval.py  diagnostics.py  helpers.py  icons.json  manifest.json  modbus_controller.py  number.py  quality_scale.yaml  runtime.py  select.py  sensor.py  services.yaml  status_mapping.py  switch.py  time.py
custom_components/solis_modbus/data/: enums.py  hybrid-waveshare.py  hybrid_sensors.py  hybrid_waveshare_sensors.py  solis_config.py  status_mapping.py  string_sensors.py
custom_components/solis_modbus/sensor_data/: hybrid_sensors.py  hybrid_waveshare_sensors.py  select_sensors.py  string_sensors.py  switch_sensors.py  time_sensors.py
custom_components/solis_modbus/sensors/: solis_base_sensor.py  solis_binary_sensor.py  solis_derived_sensor.py  solis_number_sensor.py  solis_select_entity.py  solis_select_sensor.py  solis_sensor.py  solis_switch_entity.py  solis_time_entity.py
custom_components/solis_modbus/translations/: af.json  de.json  en.json  es.json  fr.json  it.json  nl.json  pt.json
docs/: requirements.txt
docs/source/: conf.py  index.rst  migration.md  sensors.md
docs/source/_templates/: layout.html
tests/: conftest.py  decode_grid_serial.py  decode_serial.py  generate_known_sensors.py  known_sensors_host.json  known_sensors_identification.json  known_sensors_serial.json  test_ac_coupling.py  test_client_manager.py  test_clock_drift.py  test_config_flow.py  test_data_retrieval.py  test_derived_sensor.py  test_diagnostics.py  test_dual_meter.py  test_entity_bucket_isolation.py  test_entity_category.py  test_essential_polling.py  test_integration_setup.py  test_migration.py  test_modbus_controller.py  test_number.py  test_register_group_recovery.py  test_repairs_issue.py  test_s16_decoding.py  test_s16_encoding.py  test_select_definitions_from_code.py  test_sensor_definition_integrity.py  test_sensor_definitions.py  test_sensor_drift.py  test_serial_fetch.py  test_services.py  test_solis_select_entity.py  test_status_mapping.py  test_storage_mode_select.py  test_switch_conflicts_requires.py  test_switch_definitions_from_code.py  test_time_entity.py  test_u32_decoding.py  test_unique_id_collision.py  (+2 more)
