[project]
name = "solis-modbus"
version = "1.0.0"
requires-python = "~=3.12.0" # keep in sync with Home Assistant
dependencies = [
    "homeassistant==2025.1.4",
    "pymodbus>=3.11.1", # keep in sync with custom_components/solis_modbus/manifest.json
]

[dependency-groups]
dev = [
    "pytest-homeassistant-custom-component==0.13.205", # keep in sync with Home Assistant
    "ruff",
]

[tool.uv]
constraint-dependencies = [
    "aiohasupervisor==0.2.2b5", # pre-release required by homeassistant 2025.1.4
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
# TODO: decrease to 120
line-length = 200

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "RUF", # ruff-specific rules
    "UP",  # pyupgrade
    "N",   # pep8-naming
# TODO: enable when ready for larger refactoring
#    "ANN", # flake8-annotations
#    "ARG", # flake8-argument-names
#    "Q",   # flake8-quotes
#    "SIM", # flake8-simplify
#    "TCH", # flake8-type-checking
#    "PYI", # flake8-pyi
]
ignore = [
    "B008", # do not perform function calls in default arguments (common in HA)
]
